--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.technoblood.playzWebapp" android:versionCode="1" android:versionName="1.0">
   <application android:label="@string/app_name" android:icon="@drawable/app_icon">
     <!--<uses-permission android:name="android.permission.VIBRATE" />-->
-
-
     <!-- The MessagingUnityPlayerActivity is a class that extends
          UnityPlayerActivity to work around a known issue when receiving
          notification data payloads in the background. -->
@@ -15,17 +13,13 @@
       <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
     <!--<service android:name="com.google.firebase.messaging.MessageForwardingService" android:exported="false" />-->
-
     <!-- [START firebase_service] -->
-    <service
-        android:name="com.technoblood.playzWebapp.FCMService"
-        android:exported="false">
+    <service android:name="com.technoblood.playzWebapp.FCMService" android:exported="false">
       <intent-filter>
         <action android:name="com.google.firebase.MESSAGING_EVENT" />
       </intent-filter>
     </service>
     <!-- [END firebase_service] -->
-    
     <!--
     <service
         android:name=".MyFirebaseInstanceIDService">
@@ -33,8 +27,5 @@
         <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
       </intent-filter>
     </service>-->
-
   </application>
-
-
 </manifest>
